[ADD] added auth
